--- a/01.text_extraction:cyberthreats_detection/01.NB_main.ipynb
+++ b/01.text_extraction:cyberthreats_detection/01.NB_main.ipynb
@@ -201,7 +201,7 @@
    "source": [
     "@retry(wait=wait_random_exponential(min=60, max=65), stop=stop_after_attempt(6))\n",
     "def text_extraction(text_var):\n",
-    "    llm = ChatOpenAI(temperature=0.0, model=\"gpt-3.5-turbo\",openai_api_key=\"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\")\n",
+    "    llm = ChatOpenAI(temperature=0.0, model=\"gpt-3.5-turbo\",openai_api_key=\"\"#ADD YOUR OPEN API KEY)\n",
     "    CodeSchema = ResponseSchema(name=\"code\", description=\"Identify the executable programming code and tool specific command. If there is more than one executable code, separate them by a comma.\")\n",
     "    langSchema = ResponseSchema(name=\"language\", description=\"Identify the programming language and tool specific command mentioned within the provided text and separate by comma\")\n",
     "    response_schemas = [CodeSchema,langSchema]\n",
@@ -273,7 +273,7 @@
    "source": [
     "@retry(wait=wait_random_exponential(min=60, max=65), stop=stop_after_attempt(6))\n",
     "def re_text_extraction(text_var):\n",
-    "    llm = ChatOpenAI(temperature=0.0, model=\"gpt-3.5-turbo\",openai_api_key=\"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\")\n",
+    "    llm = ChatOpenAI(temperature=0.0, model=\"gpt-3.5-turbo\",openai_api_key=\"\"#ADD YOUR OPEN API KEY)\n",
     "    CodeSchema = ResponseSchema(name=\"code\", description=\"Identify the executable programming code and tool specific command. If there is more than one executable code, separate them by a comma.\")\n",
     "    langSchema = ResponseSchema(name=\"language\", description=\"Identify the programming language and tool specific command mentioned within the provided text and separate by comma\")\n",
     "    response_schemas = [CodeSchema,langSchema]\n",
